# moxfield-list-verifyer

./: .gitignore  Cargo.toml  apis.http
data/: sqlite.db
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Hero.tsx  History.tsx  InputForm.tsx  ResultCard.tsx
src/: errors.rs  main.rs  models.rs  persistence.rs  progress.rs  routes.rs  validation_results.rs  validators.rs  ws.rs
src/entities/: mod.rs  prelude.rs  report.rs
src/migrator/: m20220101_000001_create_report_table.rs  mod.rs
