[package]
name = "moxfield-list-verifyer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
dotenvy = "0.15.7"
futures = "0.3.31"
moka = { version = "0.12.11", features = ["future"] }
reqwest = { version = "0.12.24", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.19"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
